--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,7 @@ body{margin-top: 80px !important;overflow: auto !important;height: 100% !importa
     .productSlideM .flip-card-back {position: absolute;top: 0;width: 100%;height: 100%;-webkit-backface-visibility: hidden;backface-visibility: hidden;background-color: transparent;-webkit-transform: rotateY(180deg);-ms-transform: rotateY(180deg);transform: rotateY(180deg);z-index: 10;}
     .productSlideM .flip-card-front {background-color: transparent;    z-index: -1;
         position: relative;}
+        .productSlideM .slick-current .flip-card-front{opacity: 0;}
     .productSlideM .flip-card-inner img{max-width: 223px;margin: 0 auto;}
     .productSlideM .slick-dots{display: none !important;}
     .productSlideMControl{display: flex;align-items: center;justify-content: center;}
