--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,9 +305,8 @@ body{margin-top: 80px !important;overflow: auto !important;height: 100% !importa
     .productSlideM .flip-card-inner {position: relative;width: 100%;height: 100%;text-align: center;transition: transform 0.5s;-webkit-transform-style: preserve-3d;-ms-transform-style: preserve-3d;transform-style: preserve-3d;}
     .productSlideM .slick-current .flip-card .flip-card-inner {-webkit-transform: rotateY(180deg);-ms-transform: rotateY(180deg);transform: rotateY(180deg);}
     .productSlideM .flip-card-back {position: absolute;top: 0;width: 100%;height: 100%;-webkit-backface-visibility: hidden;backface-visibility: hidden;background-color: transparent;-webkit-transform: rotateY(180deg);-ms-transform: rotateY(180deg);transform: rotateY(180deg);z-index: 10;}
-    .productSlideM .flip-card-front {background-color: transparent;    z-index: -1;
-        position: relative;}
-        .productSlideM .slick-current .flip-card-front{opacity: 0;}
+    .productSlideM .flip-card-front {background-color: transparent;position: relative;z-index: -1;}
+    .productSlideM .slick-current .flip-card-front{}
     .productSlideM .flip-card-inner img{max-width: 223px;margin: 0 auto;}
     .productSlideM .slick-dots{display: none !important;}
     .productSlideMControl{display: flex;align-items: center;justify-content: center;}
