--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,6 +266,7 @@ body{margin-top: 80px !important;overflow: auto !important;height: 100% !importa
     .updateTextSlide .textItem .text{margin-top: 25px;font-size: 16px;}
     .updateThumbSlide{margin-left: 450px;}
     .updateThumbSlide .Thumb{width: 50vw;padding-top: 57%;height: 100%;}
+    .updateThumbSlide .Thumb:after{height: calc(100% - 3px);}
     .updateThumbSlide .Thumb img, .updateThumbSlide .Thumb video{position: absolute;top: 0;left: 0;}
     .updateArrow{left: 5%;bottom: 15%;}
     
